--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <meta property="og:description" content="Proyecto final de Front End Academy 2022 - Fundamentos de desarrollo web. Argentina Programa 4.0" />
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/">
     <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Mi Curriculum Vitae</title>
 </head>
 <body>
     
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
