add CSS variables colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <link rel="stylesheet" href="styles.css">
     <title>Mi Curriculum Vitae</title>
 </head>
-<body>
+<body> 
+    <main class="main-container">
+        <aside class="lateral-izq col-12">
+            <h1 class="display-2">Emiliano Corvalan</h1>
+        </aside>
+        <article class="lateral-der"></article>
+    </main>
     
 
 
