add html structure + bootstrap styles

--- a/index.html
+++ b/index.html
@@ -16,10 +16,42 @@
 </head>
 <body> 
     <main class="main-container">
-        <aside class="lateral-izq col-12">
-            <h1 class="display-2">Emiliano Corvalan</h1>
+        <aside class="lateral-izq col-12 d-flex flex-column">
+            <h1 class="display-1 text-center">Isaac Daniels</h1>
+            <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
+            <hr>
+            <ul class="list-unstyled mt-2 m-4">
+                <li><span class="fw-bold p-1">Edad: </span><span>26 años</span></li>
+                <li><span class="fw-bold p-1">Direccion: </span><span>Calle Francia 222</span></li>
+                <li><span class="fw-bold p-1">Localidad: </span><span>Ciudad de Buenos Aires</span></li>
+                <li><span class="fw-bold p-1">Celular: </span><span>34-5623-1233</span></li>
+                <li><span class="fw-bold p-1">Email: </span><span>isaac.daniels@example.com</span></li>
+                <li><span class="fw-bold p-1">Estado Civil: </span><span>Soltero</span></li>
+            </ul>
         </aside>
-        <article class="lateral-der"></article>
+        <hr>
+        <article class="lateral-der">
+            <section class="educacion">
+                <h2 class="h2 m-4">Formacion académica</h2>
+                <ul class="list-unstyled m-4">
+                    <li><span class="fw-bold p-1">Instituto de formacion técnica superior N°4</span></li>
+                    <li><span class="fw-bold p-1">Titulo: </span><span>Técnico superior en desarrollo de software</span></li>
+                    <li><span class="span-grey fw-light p-1">mar 2019 - dic 2022</span></li>
+                    <li><span class="span-grey fw-light p-1">Buenos Aires</span></li>
+                </ul>
+            </section>
+            <hr>
+            <section class="experiencia">
+                <h2 class="h2 m-4">Experiencia Laboral</h2>
+                <h5 class="h5 m-4 mb-2">Desarrollador de software</h4>
+                <h6 class="h6"><span class="fw-bold p-1">SAP </span><span class="span-grey fw-light p-1">- Remoto</span></h5>
+                <ul>
+                    <li class="mx-3"><span class="fw-bold p-1">SAP </span><span class="span-grey fw-light p-1">- Remoto</span></li>
+                    <li class="mx-3"><span class="ml-4">Buenos Aires</span></li>
+                </ul>
+
+            </section>
+        </article>
     </main>
     
 
