add experiencia html

--- a/index.html
+++ b/index.html
@@ -43,12 +43,35 @@
             <hr>
             <section class="experiencia">
                 <h2 class="h2 m-4">Experiencia Laboral</h2>
-                <h5 class="h5 m-4 mb-2">Desarrollador de software</h4>
-                <h6 class="h6"><span class="fw-bold p-1">SAP </span><span class="span-grey fw-light p-1">- Remoto</span></h5>
+                <h5 class="h5 mx-4 mb-1">Desarrollador de software</h4>
+                <h6 class="h6 mx-4 mb-2"><span class="fw-bold p-1">SAP </span><span class="span-grey fw-light p-1">- Remoto</span></h5>
                 <ul>
-                    <li class="mx-3"><span class="fw-bold p-1">SAP </span><span class="span-grey fw-light p-1">- Remoto</span></li>
-                    <li class="mx-3"><span class="ml-4">Buenos Aires</span></li>
+                    <li class="mx-3">Experiencia previa en programación en C y C++ y en tiempo real.</li>
+                    <li class="mx-3">Desarrollo de interfaz gráfica de usuario y entorno QT.</li>
+                    <li class="mx-3">Capacidad de trabajo con los equipos de investigación para definir y
+                        ejecutar los desarrollos en cada una de las fases de los proyectos.</li>
                 </ul>
+
+                <h5 class="h5 mx-4 mb-1 mt-4">Desarrollador de software</h4>
+                    <h6 class="h6 mx-4 mb-2"><span class="fw-bold p-1">Arquinet </span><span class="span-grey fw-light p-1">- Buenos Aires</span></h5>
+                    <ul>
+                        <li class="mx-3">Consultas periódicas a los clientes internos sobre el estado del proyecto de
+                            desarrollo de aplicaciones y cuestiones técnicas.</li>
+                        <li class="mx-3">Dominio de Python para abordar tareas de depuración y scripting de
+                            automatización..</li>
+                        <li class="mx-3">Investigo aplicaciones de software nuevas y emergentes para diseñar,
+                            seleccionar, implementar y utilizar sistemas de información.</li>
+                    </ul>
+
+                <h5 class="h5 mx-4 mb-1 mt-4">Tester de software</h4>
+                    <h6 class="h6 mx-4 mb-2"><span class="fw-bold p-1">Arquinet </span><span class="span-grey fw-light p-1">- Buenos Aires</span></h5>
+                    <ul>
+                    <li class="mx-3">Se redujo el número total de horas de pruebas en un 20 % al escribir y
+                        optimizar los scripts.</li>
+                    <li class="mx-3">Se realizó pruebas de usabilidad en profundidad en dispositivos móviles con
+                        Windows, Android e iOS.</li>
+                    <li class="mx-3">Se evaluó la función, rendimiento y conformidad de diseño de cada producto.</li>
+                    </ul>
 
             </section>
         </article>
