--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
             <hr>
             <ul class="list-unstyled mt-2 m-4">
-                <li><span class="fw-bold p-1">Edad: </span><span>26 años</span></li>
-                <li><span class="fw-bold p-1">Direccion: </span><span>Calle Francia 222</span></li>
-                <li><span class="fw-bold p-1">Localidad: </span><span>Ciudad de Buenos Aires</span></li>
-                <li><span class="fw-bold p-1">Celular: </span><span>34-5623-1233</span></li>
-                <li><span class="fw-bold p-1">Email: </span><span>isaac.daniels@example.com</span></li>
-                <li><span class="fw-bold p-1">Estado Civil: </span><span>Soltero</span></li>
+                <li class="mb-2"><i class="bi bi-balloon p-1"></i><span> 26 años</span></li>
+                <li class="mb-2"><i class="bi bi-geo-alt-fill p-1"></i><span> Av. Lionel Messi 10, Buenos Aires. Argentina</span></li>
+                <li class="mb-2"><i class="bi bi-telephone-inbound-fill p-1"></i><span> 34-5623-1233</span></li>
+                <li class="mb-2"><i class="bi bi-envelope-at-fill p-1"></i><span> isaac.daniels@example.com</span></li>
             </ul>
         </aside>
+
         <hr>
+
         <article class="lateral-der">
             <section class="educacion">
                 <h2 class="h2 m-4">Formacion académica</h2>
@@ -41,6 +41,7 @@
                     <li><span class="span-grey fw-light p-1">Buenos Aires</span></li>
                 </ul>
             </section>
+
             <hr>
             <section class="experiencia">
                 <h2 class="h2 m-4">Experiencia Laboral</h2>
@@ -73,9 +74,12 @@
                         Windows, Android e iOS.</li>
                     <li class="mx-3">Se evaluó la función, rendimiento y conformidad de diseño de cada producto.</li>
                     </ul>
-
             </section>
         </article>
+
+        <footer>
+            
+        </footer>
     </main>
     
 
