--- a/index.html
+++ b/index.html
@@ -77,9 +77,20 @@
             </section>
         </article>
 
-        <footer>
-            
+        <hr>
+
+        <footer class="footer d-flex justify-content-between flex-column-reverse align-items-center mb-2">
+            <p class="span-grey fw-light d-inline">2023</p>
+            <div class="mb-4">
+                <a href="https://www.facebook.com/" class="px-3"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.twitter.com/" class="px-3"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.linkedin.com/" class="px-3"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.github.com/" class="px-3"><i class="bi bi-github"></i></a>
+            </div>
+            <p class="span-grey fw-light"></p>
+            <p class="span-grey fw-light d-inline">Emiliano Corvalan</p>
         </footer>
+
     </main>
     
 
