primeros cambios responsive, backg footer, linux

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body> 
     <main class="main-container">
-        <aside class="lateral-izq col-12 d-flex flex-column">
+        <aside class="lateral-izq col-12 col-md-4 d-flex flex-column">
             <h1 class="display-1 text-center">Isaac Daniels</h1>
             <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
             <hr>
@@ -31,7 +31,7 @@
 
         <hr>
 
-        <article class="lateral-der">
+        <article class="lateral-der col-md-8">
             <section class="educacion">
                 <h2 class="h2 m-4">Formacion académica</h2>
                 <ul class="list-unstyled m-4">
@@ -77,21 +77,22 @@
             </section>
         </article>
 
-        <hr>
-
-        <footer class="footer d-flex justify-content-between flex-column-reverse align-items-center mb-2">
-            <p class="span-grey fw-light d-inline">2023</p>
-            <div class="mb-4">
-                <a href="https://www.facebook.com/" class="px-3"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.twitter.com/" class="px-3"><i class="bi bi-twitter"></i></a>
-                <a href="https://www.linkedin.com/" class="px-3"><i class="bi bi-linkedin"></i></a>
-                <a href="https://www.github.com/" class="px-3"><i class="bi bi-github"></i></a>
-            </div>
-            <p class="span-grey fw-light"></p>
-            <p class="span-grey fw-light d-inline">Emiliano Corvalan</p>
-        </footer>
+        
 
     </main>
+
+    <footer class="footer d-flex justify-content-between flex-column-reverse align-items-center mb-2">
+        <hr>
+        <p class="span-grey fw-light d-inline">2023</p>
+        <div class="mb-4">
+            <a href="https://www.facebook.com/" class="px-3"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.twitter.com/" class="px-3"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.linkedin.com/" class="px-3"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.github.com/" class="px-3"><i class="bi bi-github"></i></a>
+        </div>
+        <p class="span-grey fw-light"></p>
+        <p class="span-grey fw-light d-inline">Emiliano Corvalan</p>
+    </footer>
     
 
 
