hr gold color - margin h1 img

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 </head>
 <body> 
     <main class="main-container">
-        <aside class="lateral-izq col-12 col-md-4 d-flex flex-column">
-            <h1 class="display-1 text-center">Isaac Daniels</h1>
+
+        <aside class="lateral-izq col-12 col-md-5 d-flex flex-column">
+            <h1 class="h1 text-center span-gold">Isaac Daniels</h1>
+            <h4 class="h4 text-center span-gold">Desarrollador Fullstack</h4>
             <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
-            <hr>
+            <hr class="span-gold">
             <ul class="list-unstyled mt-2 m-4">
                 <li class="mb-2"><i class="bi bi-balloon p-1"></i><span> 26 años</span></li>
                 <li class="mb-2"><i class="bi bi-geo-alt-fill p-1"></i><span> Av. Lionel Messi 10, Buenos Aires. Argentina</span></li>
@@ -29,9 +31,9 @@
             </ul>
         </aside>
 
-        <hr>
+        <hr class="span-gold">
 
-        <article class="lateral-der col-md-8">
+        <article class="lateral-der col-md-7">
             <section class="educacion">
                 <h2 class="h2 m-4">Formacion académica</h2>
                 <ul class="list-unstyled m-4">
@@ -42,7 +44,8 @@
                 </ul>
             </section>
 
-            <hr>
+            <hr class="span-gold">
+
             <section class="experiencia">
                 <h2 class="h2 m-4">Experiencia Laboral</h2>
                 <h5 class="h5 mx-4 mb-1">Desarrollador de software</h4>
@@ -76,13 +79,10 @@
                     </ul>
             </section>
         </article>
-
-        
-
     </main>
 
     <footer class="footer d-flex justify-content-between flex-column-reverse align-items-center mb-2">
-        <hr>
+        <hr class="span-gold">
         <p class="span-grey fw-light d-inline">2023</p>
         <div class="mb-4">
             <a href="https://www.facebook.com/" class="px-3"><i class="bi bi-facebook"></i></a>
