comentarios en css, se crea animacion de tipeo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <main class="main-container">
 
         <aside class="lateral-izq col-12 col-md-5 d-flex flex-column">
-            <h1 class="h1 text-center span-gold">Isaac Daniels</h1>
-            <h4 class="h4 text-center span-gold">Desarrollador Fullstack</h4>
+            <h1 class="h1 text-center span-gold mt-2 mb-2">Isaac Daniels</h1>
+            <h4 class="h4 text-center span-gold efecto-escritura mb-3">Desarrollador Fullstack</h4>
             <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
             <hr class="span-gold">
             <ul class="list-unstyled mt-2 m-4">
