titulos comentarios css - gradientes de fondo

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <main class="main-container">
 
         <aside class="lateral-izq col-12 col-md-5 d-flex flex-column">
-            <h1 class="h1 text-center span-gold mt-2 mb-2">Isaac Daniels</h1>
-            <h4 class="h4 text-center span-gold efecto-escritura mb-3">Desarrollador Fullstack</h4>
+            <h1 class="h1 text-center mt-2 mb-2">Isaac Daniels</h1>
+            <h4 class="h4 text-center span-grey efecto-escritura mb-3">Desarrollador Fullstack</h4>
             <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
             <hr class="span-gold">
             <ul class="list-unstyled mt-2 m-4">
                 <li class="mb-2"><i class="bi bi-balloon p-1"></i><span> 26 años</span></li>
-                <li class="mb-2"><i class="bi bi-geo-alt-fill p-1"></i><span> Av. Lionel Messi 10, Buenos Aires. Argentina</span></li>
+                <li class="mb-2"><i class="bi bi-geo-alt-fill p-1"></i><span> Av. Lionel Messi 10, Buenos Aires.</span></li>
                 <li class="mb-2"><i class="bi bi-telephone-inbound-fill p-1"></i><span> 34-5623-1233</span></li>
                 <li class="mb-2"><i class="bi bi-envelope-at-fill p-1"></i><span> isaac.daniels@example.com</span></li>
             </ul>
@@ -46,7 +46,7 @@
 
             <hr class="span-gold">
 
-            <section class="experiencia">
+            <section class="experiencia mb-4">
                 <h2 class="h2 m-4">Experiencia Laboral</h2>
                 <h5 class="h5 mx-4 mb-1">Desarrollador de software</h4>
                 <h6 class="h6 mx-4 mb-2"><span class="fw-bold p-1">SAP </span><span class="span-grey fw-light p-1">- Remoto</span></h5>
@@ -63,13 +63,13 @@
                         <li class="mx-3">Consultas periódicas a los clientes internos sobre el estado del proyecto de
                             desarrollo de aplicaciones y cuestiones técnicas.</li>
                         <li class="mx-3">Dominio de Python para abordar tareas de depuración y scripting de
-                            automatización..</li>
+                            automatización.</li>
                         <li class="mx-3">Investigo aplicaciones de software nuevas y emergentes para diseñar,
                             seleccionar, implementar y utilizar sistemas de información.</li>
                     </ul>
 
                 <h5 class="h5 mx-4 mb-1 mt-4">Tester de software</h4>
-                    <h6 class="h6 mx-4 mb-2"><span class="fw-bold p-1">Arquinet </span><span class="span-grey fw-light p-1">- Buenos Aires</span></h5>
+                    <h6 class="h6 mx-4 mb-2"><span class="fw-bold p-1">Bugisoft </span><span class="span-grey fw-light p-1">- Buenos Aires</span></h5>
                     <ul>
                     <li class="mx-3">Se redujo el número total de horas de pruebas en un 20 % al escribir y
                         optimizar los scripts.</li>
@@ -90,8 +90,7 @@
             <a href="https://www.linkedin.com/" class="px-3"><i class="bi bi-linkedin"></i></a>
             <a href="https://www.github.com/" class="px-3"><i class="bi bi-github"></i></a>
         </div>
-        <p class="span-grey fw-light"></p>
-        <p class="span-grey fw-light d-inline">Emiliano Corvalan</p>
+        <p class="fw-light d-inline m-4">Emiliano Corvalan</p>
     </footer>
     
 
