se centran barras separadoras

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="h1 text-center mt-2 mb-2">Isaac Daniels</h1>
             <h4 class="h4 text-center span-grey efecto-escritura mb-3">Desarrollador Fullstack</h4>
             <img src="img/profile.jpg" alt="profile-image" class="img-fluid d-block mx-auto rounded-circle">
-            <hr class="span-gold">
+            <hr class="span-gold mt-4 mb-2">
             <ul class="list-unstyled mt-2 m-4">
                 <li class="mb-2"><i class="bi bi-balloon p-1"></i><span> 26 años</span></li>
                 <li class="mb-2"><i class="bi bi-geo-alt-fill p-1"></i><span> Av. Lionel Messi 10, Buenos Aires.</span></li>
